Enabled pylint and fixed linting issues
Signed-off-by: Farhaan Bukhsh <farhaan@opencraft.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: python
 python:
-    - "2.7"
     - "3.5"
     - "3.8"
 env:
@@ -15,9 +14,9 @@ install:
     - "pip install 'selenium<3'" # xblock-sdk installs a newer version but we still need 2.x
     - "npm install"
 script:
-    - pycodestyle group_project_v2 tests --max-line-length=120 --ignore=E402
-    #- pylint group_project_v2 --rcfile=pylintrc
-    #- pylint tests --rcfile=tests/pylintrc
+    - pycodestyle group_project_v2 tests --max-line-length=120 --ignore=E402,W504 # Ignoring line break after binary operator and module level import
+    - pylint group_project_v2 --rcfile=pylintrc
+    - pylint tests --rcfile=tests/pylintrc
     - ./node_modules/jshint/bin/jshint group_project_v2 tests
     - xvfb-run ./node_modules/.bin/karma start tests/js/karma.conf.js --single-run
     - cat coverage/js/karma_coverage.txt
